# Rocket-League-sideswipe-Taller-1-FIUBA

./: .gitignore  CMakeLists.txt  README.md  ServerSimplificated.puml  ServerSimplificatedpart2.puml  script  test_client.cpp
common/source/: Thread.h
common/source/Queue/: CMakeLists.txt  blocking_queue.h  protected_queue.h
common/source/Socket/: CMakeLists.txt
game_logic/: ball.cpp  ball.h  car.cpp  car.h  constants.h  game_logic.cpp  game_logic.h  snap.cpp  snap.h  test.cpp
libs/box2d/: CMakeLists.txt
libs/box2d/testbed/: CMakeLists.txt
libs/box2d/testbed/tests/: Constants.h  ball.cpp  ball.h  car.cpp  car.h  contact_listener.cpp  contact_listener.h  rl.cpp
server/: CMakeLists.txt  Makefile  main.cpp
server/common/Queue/: protected_queue.h
server/common/Socket/: Resolver.cpp  Socket.h
server/source/: AcceptThread.cpp  AcceptThread.h  CMakeLists.txt  MyClass.cpp  MyClass.h  Server.cpp  Server.h  resolver.cpp  socket.cpp
server/source/Game/: Game.h  GameHandler.cpp
server/source/Menu/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ClientThread.cpp  ClientThread.h  ClientsHandler.h  Menu.cpp  Menu.h  ServerMenuProtocol.cpp  ServerMenuProtocol.h
server/source/Menu/Client/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ClientThread.h  ClientsHandler.cpp  ClientsHandler.h  GamingClient.cpp  GamingClient.h  GammingClient.cpp  GammingClient.h  ProtocolRecv.cpp  ProtocolRecv.h  ProtocolSend.cpp  ProtocolSend.h  ServerMenuProtocol.cpp  ServerMenuProtocol.h  Snap.cpp  Snap.h
server/source/Menu/GameCommand/: DownCommand.cpp  DownCommand.h  GameCommand.cpp  GameCommand.h  GameCommandHandler.cpp  GameCommandHandler.h  LeftCommand.cpp  LeftCommand.h  LeftReleaseCommand.cpp  RightCommand.cpp  RightCommand.h  RightReleaseCommand.cpp  SpaceCommand.cpp  SpaceReleaseCommand.cpp  UpCommand.cpp  UpCommand.h  UpReleaseCommand.cpp  UpReleaseCommand.h
server/source/Menu/Games/: CMakeLists.txt  GameHandler.cpp  GameHandler.h  GameLogic.cpp  GameLogic.h  RunGame.cpp  RunGame.h
server/source/Menu/Games/GameObjects/: ball.cpp  car.cpp  car.h
server/source/Menu/MenuCommand/: CMakeLists.txt  Comand.cpp  Comand.h  ComandAdd.cpp  ComandCreate.cpp  ComandHandler.cpp  ComandHandler.h  ComandList.cpp  CommandCreate.cpp
source/: CMakeLists.txt  server_main.cpp
source/common/Socket/: CMakeLists.txt  Socket.cpp
source/common/Thread/: CMakeLists.txt
source/server/: AcceptThread.h  CMakeLists.txt  Server.cpp
source/server/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
source/server/Menu/Client/: CMakeLists.txt  ClientsHandler.h  GamingClient.cpp  GamingClient.h  ProtocolRecv.cpp  ProtocolSend.h  Snap.cpp  Snap.h
source/server/Menu/GameCommand/: GameCommandHandler.cpp  GameCommandHandler.h  LeftCommand.h  RightCommand.cpp  UpCommand.cpp  UpCommand.h
source/server/Menu/Games/: Game.cpp  GameHandler.h  GameLogic.cpp  RunGame.h
source/server/Menu/Games/GameObjects/: ball.cpp  car.cpp
source/server/Menu/MenuCommand/: CMakeLists.txt  Command.cpp  CommandAdd.h  CommandCreate.h  CommandHandler.cpp  CommandHandler.h  CommandList.cpp  CommandWithParameters.h
src/: test.cpp
src/Menu/: CMakeLists.txt  menu.cpp  menu.h  menu.ui
src/client/: ball.cpp  ball.h  blockingQueue.h  car.cpp  car.h  client_interface.cpp  client_interface.h  main.cpp  menu.cpp  menu.h  menuProtocol.cpp  menuProtocol.h  menuThread.cpp  menuThread.h  protocolDeserializer.cpp  protocolDeserializer.h  receiverThread.cpp  receiverThread.h  senderThread.cpp  senderThread.h  snapProtocol.h  sound_manager.cpp  sound_manager.h  texture_manager.cpp  texture_manager.h  world.cpp  world.h
src/common/: BlockingQueue.h  ProtectedQueue.h  QueueEx.h  snap.h  socket.cpp  socket.h
src/common/blocking_queue/: protected_queue.h
src/common/socket/: CMakeLists.txt  resolver.h
src/server/: AcceptThread.cpp  AcceptThread.h  Server.cpp  Server.h  blockingQueue.h  car.cpp  car.h  client.cpp  client.h  command.cpp  command.h  listener.cpp  listener.h  main.cpp  mapMonitor.cpp  mapMonitor.h  thread.h
src/server/Menu/: Menu.cpp  Menu.h  MenuLogic.cpp  MenuLogic.h  MenuState.h
src/server/Menu/Client/: ClientsHandler.cpp  ClientsHandler.h  GamingClient.cpp  GamingClient.h  MenuClient.cpp  MenuClient.h  MenuProtocol.cpp  MenuProtocol.h  ProtocolRecv.cpp  ProtocolRecv.h  ProtocolSend.cpp  ProtocolSend.h  ServerMenuProtocol.h  Snap.cpp  Snap.h  StanbyClient.cpp  StandbyClient.h
src/server/Menu/Client/TestSnap/: TestSnap.h
src/server/Menu/Exceptions/: MenuCommandEx.h
src/server/Menu/GameCommand/: BadCommand.cpp  BadCommand.h  GameCommand.cpp  GameCommand.h  GameCommandHandler.cpp  GameCommandHandler.h  LeftCommand.cpp  LeftCommand.h  LeftReleaseCommand.cpp  LeftReleaseCommand.h  NitroCommand.cpp  NitroCommand.h  NitroReleaseCommand.cpp  NitroReleaseCommand.h  RightCommand.cpp  RightCommand.h  RightReleaseCommand.cpp  RightReleaseCommand.h  SpaceCommand.cpp  SpaceCommand.h  SpaceReleaseCommand.cpp  SpaceReleaseCommand.h  UpCommand.cpp  UpCommand.h  UpReleaseCommand.cpp  UpReleaseCommand.h
src/server/Menu/Games/: Game.cpp  Game.h  GameHandler.cpp  GameHandler.h  GameLogic.cpp  GameLogic.h  Games.cpp  Games.h  RLContactListener.cpp  RLContactListener.h  RunGame.cpp  RunGame.h
src/server/Menu/Games/GameObjects/: Constants.h  ball.cpp  ball.h  car.cpp  car.h
src/server/Menu/MenuCommand/: BadCommand.cpp  BadCommand.h  Command.cpp  Command.h  CommandAdd.cpp  CommandAdd.h  CommandCreate.cpp  CommandCreate.h  CommandHandler.cpp  CommandHandler.h  CommandList.cpp  CommandList.h  CommandTransform.cpp  CommandTransform.h  CommandWithParameters.h  IncompleteCommandAdd.cpp  IncompleteCommandAdd.h  MenuEvent.h  MenuEventAddClient.cpp  MenuEventAddClient.h
test/server/: deserializer.h  footest.h  serializer.h  serializertest.h  snapshottest.h  test.cpp
